@@ -1,6 +1,7 @@
 Revision history for DBIx::Class
 
-	- Another fix for count with scalar group_by.
+        - another fix for count with scalar group_by
+        - remove dependency on Module::Find in 40resultsetmanager.t (RT #17598)
 
 0.05005 2006-02-13 21:24:51
         - remove build dependency on version.pm
